--- a/templates/frontend/components/text_input.html
+++ b/templates/frontend/components/text_input.html
@@ -19,9 +19,9 @@
   <div class="govuk-input__prefix" aria-hidden="true">{{ field.options|item:"input_prefix" }}</div>
   {% endif %}
   <input type="text" 
-    class="govuk-input {% if field.size or True %} govuk-input--width-{{field.size}} {% endif %}{% if field.error %} govuk-input--error {% endif %}{% if field.options|item:"is_code" %} govuk-input--extra-letter-spacing {% endif %}" 
+    class="govuk-input {% if field.options|item:"size" or True %} govuk-input--width-{{field.options|item:"size"}} {% endif %}{% if field.error %} govuk-input--error {% endif %}{% if field.options|item:"is_code" %} govuk-input--extra-letter-spacing {% endif %}" 
     id="{{ field.id }}" name="{{ field.name }}"  autocomplete="{{ field.options|item:"autocomplete," }}"
-    maxlength="{% if field.options|item:"size" %}{{field.size|item:"size"}}{% endif %}"
+    maxlength="{% if field.options|item:"size" %}{{field.options|item:"size"}}{% endif %}"
     spellcheck="{% if field.options|item:"spellchecker" == False %}false{% endif %}">
   {% if field.options|item:"input_suffix" %}
   <div class="govuk-input__suffix" aria-hidden="true">{{field.options|item:"input_suffix"}}</div>
