fix text-input component and its test cases

--- a/templates/frontend/components/text_input.html
+++ b/templates/frontend/components/text_input.html
@@ -4,7 +4,7 @@
 {% if one_question %}
 <h1 class="govuk-label-wrapper">
   <label class="govuk-label govuk-label--l" for="{{ field.id }}">
-    {{ field.question }}
+    {{ field.caption }}
   </label>
 </h1>
 {% else %}
