--- a/templates/frontend/components/text_input.html
+++ b/templates/frontend/components/text_input.html
@@ -1,17 +1,7 @@
 {% extends "frontend/components/base_component/base_component.html" %}
 {% load common %}
 {% block component_body %}
-{% if one_question %}
-<h1 class="govuk-label-wrapper">
-  <label class="govuk-label govuk-label--l" for="{{ field.id }}">
-    {{ field.caption }}
-  </label>
-</h1>
-{% else %}
-<label class="govuk-label" for="{{ field.id }}">
-  {{ field.caption }}
-</label>
-{% endif %}
+{% field_label field.id field.caption one_question %}
 {% hint field.hint %}
 {% field_error field.error %}
 <div class="govuk-input__wrapper">
