--- a/templates/frontend/components/base_component/field_label.html
+++ b/templates/frontend/components/base_component/field_label.html
@@ -1,11 +1,7 @@
-{% if bold %}
-<h1 class="govuk-label-wrapper">
+{% if bold %}<h1 class="govuk-label-wrapper">
   <label class="govuk-label govuk-label--l" for="{{ field_id }}">
     {{ field_label }}
   </label>
-</h1>
-{% else %}
-<label class="govuk-label" for="{{ field_id }}">
+</h1>{% else %}<label class="govuk-label" for="{{ field_id }}">
   {{ field_label }}
-</label>
-{% endif %}
+</label>{% endif %}
