--- a/templates/frontend/components/checkboxes.html
+++ b/templates/frontend/components/checkboxes.html
@@ -1,39 +1,27 @@
-<div class="govuk-form-group">
-    <fieldset class="govuk-fieldset" aria-describedby="countries-hint">
-      <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-        <h1 class="govuk-fieldset__heading">
-          Will you be travelling to any of these countries?
-        </h1>
-      </legend>
-      <div id="countries-hint" class="govuk-hint">
-        Select all countries that apply
-      </div>
-      <div class="govuk-checkboxes" data-module="govuk-checkboxes">
-        <div class="govuk-checkboxes__item">
-          <input class="govuk-checkboxes__input" id="countries" name="countries" type="checkbox" value="france">
-          <label class="govuk-label govuk-checkboxes__label" for="countries">
-            France
-          </label>
-        </div>
-        <div class="govuk-checkboxes__item">
-          <input class="govuk-checkboxes__input" id="countries-2" name="countries" type="checkbox" value="portugal">
-          <label class="govuk-label govuk-checkboxes__label" for="countries-2">
-            Portugal
-          </label>
-        </div>
-        <div class="govuk-checkboxes__item">
-          <input class="govuk-checkboxes__input" id="countries-3" name="countries" type="checkbox" value="spain">
-          <label class="govuk-label govuk-checkboxes__label" for="countries-3">
-            Spain
-          </label>
-        </div>
-        <div class="govuk-checkboxes__divider">or</div>
-        <div class="govuk-checkboxes__item">
-          <input class="govuk-checkboxes__input" id="countries-5" name="countries" type="checkbox" value="none" data-behaviour="exclusive">
-          <label class="govuk-label govuk-checkboxes__label" for="countries-5">
-            No, I will not be travelling to any of these countries
-          </label>
-        </div>
-      </div>
-    </fieldset>
+{% extends "frontend/components/base_component/base_component.html" %}
+{% load common %}
+{% block component_body %}
+<fieldset class="govuk-fieldset" aria-describedby="countries-hint">
+  <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+    {% field_label field.id field.caption one_question %}
+  </legend>
+  {% hint field.hint %}
+  <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+    {% for item in field.options|item:"items" %}
+    <div class="govuk-checkboxes__item">
+      <input class="govuk-checkboxes__input" id="{{field.id}}-{{item}}" name="{{field.name}}" type="checkbox" value="{{item}}">
+      <label class="govuk-label govuk-checkboxes__label" for="{{field.name}}">
+        {{item}}
+      </label>
+    </div>
+    {% endfor %}
+    <div class="govuk-checkboxes__divider">or</div>
+    <div class="govuk-checkboxes__item">
+      <input class="govuk-checkboxes__input" id="countries-5" name="countries" type="checkbox" value="none" data-behaviour="exclusive">
+      <label class="govuk-label govuk-checkboxes__label" for="countries-5">
+        No, I will not be travelling to any of these countries
+      </label>
+    </div>
   </div>
+</fieldset>
+{% endblock %}
