add none option to checkboxes

--- a/templates/frontend/components/checkboxes.html
+++ b/templates/frontend/components/checkboxes.html
@@ -20,13 +20,15 @@
       {% endif %}
     </div>
     {% endfor %}
+    {% if field.options|item:'none' %}
     <div class="govuk-checkboxes__divider">or</div>
     <div class="govuk-checkboxes__item">
-      <input class="govuk-checkboxes__input" id="countries-5" name="countries" type="checkbox" value="none" data-behaviour="exclusive">
-      <label class="govuk-label govuk-checkboxes__label" for="countries-5">
-        No, I will not be travelling to any of these countries
+      <input class="govuk-checkboxes__input" id="{{field.id}}-none" name="{{field.name}}" type="checkbox" value="none" data-behaviour="exclusive">
+      <label class="govuk-label govuk-checkboxes__label" for="{{field.id}}-none">
+        {{ field.options|item:'none' }}
       </label>
     </div>
+    {% endif %}
   </div>
 </fieldset>
 {% endblock %}
