implement style-bold-size

--- a/templates/frontend/partials/header.html
+++ b/templates/frontend/partials/header.html
@@ -11,7 +11,7 @@
           <img src="/assets/images/govuk-logotype-crown.png" class="govuk-header__logotype-crown-fallback-image" width="36" height="32" alt="">
           <![endif]-->
             <span class="govuk-header__logotype-text">
-              Orthodontics.online
+              DynaPortal.online
             </span>
           </span>
         </a>
