--- a/templates/frontend/components/checkboxes.html
+++ b/templates/frontend/components/checkboxes.html
@@ -2,12 +2,12 @@
 {% load common %}
 {% block component_body %}
 <fieldset class="govuk-fieldset" aria-describedby="countries-hint">
-  <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-    {% field_label field.id field.caption one_question %}
+  <legend class="govuk-fieldset__legend govuk-fieldset__legend--{% if field.options|item:"style-bold-size" %}l{% else %}m{% endif %}">
+    {% field_label field.id field.caption field.options|item:"style-bold-size" %}
   </legend>
   {% hint field.hint %}
   {% field_error field.error %}
-  <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+  <div class="govuk-checkboxes {% if not field.options|item:"style-bold-size" %}govuk-checkboxes--small{% endif %}" data-module="govuk-checkboxes">
     {% for item in field.options|item:"items" %}
     <div class="govuk-checkboxes__item">
       <input class="govuk-checkboxes__input" id="{{field.id}}-{{item|item:'value'}}" name="{{field.name}}" type="checkbox" value="{{item|item:'value'}}">
