--- a/templates/frontend/home.html
+++ b/templates/frontend/home.html
@@ -11,6 +11,7 @@
 
 {% button "Test Button" "primary" %}
 {% button "Start 1" "secondary" %}
+{% button "Delete" "warning" %}
 
 {% for field in fields %}
     {% if field.field_type.name == 'INPUT_TEXT' %}
