--- a/templates/frontend/home.html
+++ b/templates/frontend/home.html
@@ -10,11 +10,14 @@
 <h1 class="govuk-heading-xl">Customised page template 123</h1>
 
 {% button "Test Button" "primary" %}
+{% button "Start Application" "start" %}
 {% button "Start 1" "secondary" %}
 {% button "Delete" "warning" %}
+{% button "Disabled button" "primary" True %}
 <div style="background-color: #1d70b8;">
 {% button "Create an account" "inverse" %}
 </div>
+
 
 {% for field in fields %}
     {% if field.field_type.name == 'INPUT_TEXT' %}
