--- a/dynaportal/templates/dynaportal/base.html
+++ b/dynaportal/templates/dynaportal/base.html
@@ -6,7 +6,7 @@
 {% block document-head %}{% include 'dynaportal/partials/document-head.html' %}{% endblock %}
 
 {% block body %}
-<body class="govuk-template__body app-body-class" data-test="My value" data-other="report:details">
+<body class="govuk-template__body app-body-class" onload="runOnloadTasks()">
   <script>
     document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');
   </script>
