--- a/dynaportal/templates/dynaportal/partials/cookies.html
+++ b/dynaportal/templates/dynaportal/partials/cookies.html
@@ -1,22 +1,29 @@
 <div class="govuk-cookie-banner " data-nosnippet role="region" aria-label="Cookies on [name of service]">
-    <div class="govuk-cookie-banner__message govuk-width-container">
-      <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
-          <h2 class="govuk-cookie-banner__heading govuk-heading-m">Cookies on [name of service]</h2>
-          <div class="govuk-cookie-banner__content">
-            <p class="govuk-body">We use some essential cookies to make this service work.</p>
-            <p class="govuk-body">We'd also like to use analytics cookies so we can understand how you use the service and make improvements.</p>
-          </div>
+  <div class="govuk-cookie-banner__message govuk-width-container">
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-two-thirds">
+        <h2 class="govuk-cookie-banner__heading govuk-heading-m">Cookies on {{tradeMark}}</h2>
+        <div class="govuk-cookie-banner__content">
+          <p class="govuk-body">We use some essential cookies to make this service work.</p>
+          <p class="govuk-body">We'd also like to use analytics cookies so we can understand how you use the service and make improvements.</p>
         </div>
       </div>
-      <div class="govuk-button-group">
-        <button value="accept" type="button" name="cookies" class="govuk-button" data-module="govuk-button">
-          Accept analytics cookies
-        </button>
-        <button value="reject" type="button" name="cookies" class="govuk-button" data-module="govuk-button">
-          Reject analytics cookies
-        </button>
-        <a class="govuk-link" href="#">View cookies</a>
-      </div>
+    </div>
+    <div class="govuk-button-group">
+      <button value="accept" type="button" name="cookies" class="govuk-button" data-module="govuk-button" onclick="Cookies.set('consent-cookie', 'yes', { expires: 7, path: '' });checkCookiesConsent()">
+        Accept analytics cookies
+      </button>
+      <button value="reject" type="button" name="cookies" class="govuk-button" data-module="govuk-button" onclick="Cookies.set('consent-cookie', 'no', { expires: 7, path: '' });checkCookiesConsent()">
+        Reject analytics cookies
+      </button>
+      <a class="govuk-link" style="display:none;" href="#">View cookies</a>
     </div>
   </div>
+<script>
+function checkCookiesConsent(){
+if (Cookies.get('consent-cookie')!==undefined){
+  document.getElementsByClassName('govuk-cookie-banner')[0].style = "display:none";
+}      
+}
+onLoadTasks.push(checkCookiesConsent)</script>
+</div>
