--- a/dynaportal/templates/dynaportal/partials/document-head.html
+++ b/dynaportal/templates/dynaportal/partials/document-head.html
@@ -13,5 +13,15 @@
     <link rel="apple-touch-icon" sizes="152x152" href="{% static "images/ortho-apple-touch-icon-152x152.png" %}?{% cache_bust %}">
     <link rel="apple-touch-icon" href="{% static "images/ortho-apple-touch-icon.png" %}?{% cache_bust %}">
     <link href="{% static "css/govuk-all.css" %}?{% cache_bust %}" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
+    <script defer src="{% static "js/govuk-all.js" %}?{% cache_bust %}"></script>
     <meta property="og:image" content="&lt;YOUR-DOMAIN&gt;/images/your-domain-opengraph-image.png">
+    <script>
+        var onLoadTasks = [];
+        function runOnloadTasks() {
+            onLoadTasks.forEach(function(task){
+                task();
+            });
+        }
+    </script>
 </head>
