--- a/dynaportal/templates/dynaportal/home.html
+++ b/dynaportal/templates/dynaportal/home.html
@@ -8,20 +8,7 @@
 {% load radios %}
 
 {% block content %}
-<h1 class="govuk-heading-xl">Customised page template 123</h1>
-
-<div class="govuk-button-group">
-{% button "Test Button" "primary" %}
-{% button "Start Application" "start" %}
-{% button "Start 1" "secondary" %}
-{% button "Delete" "warning" %}
-{% button "Disabled button" "primary" True %}
-</div>
-
-<div style="background-color: #1d70b8;">
-{% button "Create an account" "inverse" %}
-</div>
-
+{%if page%}<h1 class="govuk-heading-xl">{{page.title}}</h1>{%endif%}
 
 {% for field in fields %}
     {% if field.field_type.name == 'INPUT_TEXT' %}
