--- a/dynaportal/templates/dynaportal/partials/banner.html
+++ b/dynaportal/templates/dynaportal/partials/banner.html
@@ -1,10 +1,6 @@
 <div class="govuk-phase-banner">
     <p class="govuk-phase-banner__content">
-      <strong class="govuk-tag govuk-phase-banner__content__tag">
-        Alpha
-      </strong>
-      <span class="govuk-phase-banner__text">
-        This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it. Your message comes here!
-      </span>
+      <strong class="govuk-tag govuk-phase-banner__content__tag">{{banner.tag}}</strong>
+      <span class="govuk-phase-banner__text">{{banner.text}}</span>
     </p>
 </div>
