fix id error for label

--- a/dynaportal/templates/dynaportal/components/select.html
+++ b/dynaportal/templates/dynaportal/components/select.html
@@ -6,7 +6,7 @@
     {% field_label field.id field.caption field.options|item:"style-bold-size" %}
     {% hint field.hint %}
     {% field_error field.error %}
-    <select class="govuk-select {%if field.error%}govuk-select--error{%endif%}" name="{{field.name}}">
+    <select class="govuk-select {%if field.error%}govuk-select--error{%endif%}" id="{{field.id}}" name="{{field.name}}">
       <option value="" selected>Choose an item</option>{% for item in field.options|item:"items" %}
       <option value="{{item|item:'value'}}">{{item|item:'caption'}}</option>{% endfor %}
     </select>
