--- a/dynaportal/templates/dynaportal/home.html
+++ b/dynaportal/templates/dynaportal/home.html
@@ -7,6 +7,7 @@
 {% load button %}
 {% load radios %}
 {% load select %}
+{% load heading %}
 
 {% block content %}
 {%if page%}<h1 class="govuk-heading-xl">{{page.title}}</h1>{%endif%}
@@ -20,6 +21,8 @@
 {% radios field %}
     {% elif field.field_type.name == 'SELECT' %}
 {% select field %}
+    {% elif field.field_type.name == 'HEADING' %}
+{% heading field %}
     {% endif %}
 {% endfor %}
 </form>
