fix name of components and page-title

--- a/dynaportal/templates/dynaportal/partials/document-head.html
+++ b/dynaportal/templates/dynaportal/partials/document-head.html
@@ -2,7 +2,7 @@
 {% load cache_bust %}
 <head>
     <meta charset="utf-8">
-    <title>Page title comes here!</title>
+    <title>{{title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta name="theme-color" content="blue">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
