--- a/dynaportal/templates/dynaportal/components/checkboxes.html
+++ b/dynaportal/templates/dynaportal/components/checkboxes.html
@@ -1,5 +1,5 @@
 {% extends "dynaportal/components/base_component/base_component.html" %}
-{% load common %}
+{% load common %} 
 {% block component_body %}
 <fieldset class="govuk-fieldset" aria-describedby="countries-hint">
   <legend class="govuk-fieldset__legend govuk-fieldset__legend--{% if field.options|item:"style-bold-size" %}l{% else %}m{% endif %}">
@@ -10,7 +10,7 @@
   <div class="govuk-checkboxes {% if not field.options|item:"style-bold-size" %}govuk-checkboxes--small{% endif %}" data-module="govuk-checkboxes">
     {% for item in field.options|item:"items" %}
     <div class="govuk-checkboxes__item">
-      <input class="govuk-checkboxes__input" id="{{field.id}}-{{item|item:'value'}}" name="{{field.name}}-{{item|item:'value'}}" type="checkbox" value="{{item|item:'value'}}">
+      <input class="govuk-checkboxes__input" id="{{field.id}}-{{item|item:'value'}}" name="{{field.name}}_{{item|item:'value'}}" type="checkbox" value="{{item|item:'value'}}">
       <label class="govuk-label govuk-checkboxes__label" for="{{field.name}}">
         {{item|item:'caption'}}
       </label>
@@ -24,7 +24,7 @@
     {% if field.options|item:'none' %}
     <div class="govuk-checkboxes__divider">or</div>
     <div class="govuk-checkboxes__item">
-      <input class="govuk-checkboxes__input" id="{{field.id}}-none" name="{{field.name}}-none" type="checkbox" value="none" data-behaviour="exclusive">
+      <input class="govuk-checkboxes__input" id="{{field.id}}-none" name="{{field.name}}_none" type="checkbox" value="none" data-behaviour="exclusive">
       <label class="govuk-label govuk-checkboxes__label" for="{{field.id}}-none">
         {{ field.options|item:'none' }}
       </label>
