--- a/dynaportal/templates/dynaportal/components/radio_items.html
+++ b/dynaportal/templates/dynaportal/components/radio_items.html
@@ -1,9 +1,9 @@
-{% load common %}
+{% load common %} 
 <div class="govuk-radios" data-module="govuk-radios">
     {% for item in items %}{%if item.divider %}
     <div class="govuk-radios__divider">{{item.divider}}</div>
 {%endif%}<div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="{{field_id}}-{{item|item:'value'}}" name="{{name}}-{{item|item:'value'}}" type="radio"
+        <input class="govuk-radios__input" id="{{field_id}}-{{item|item:'value'}}" name="{{name}}_{{item|item:'value'}}" type="radio"
             value="{{item|item:'value'}}">
         <label class="govuk-label govuk-radios__label" for="{{field.id}}-{{item|item:'value'}}">
             {{item|item:'caption'}}
