--- a/dynaportal/templates/dynaportal/home.html
+++ b/dynaportal/templates/dynaportal/home.html
@@ -25,6 +25,6 @@
 {% heading field %}
     {% endif %}
 {% endfor %}
-{% button 'Submit' %} 
+{% button 'Submit' '' %} 
 </form>
 {% endblock content %}
