add button dataclass

--- a/dynaportal/templates/dynaportal/home.html
+++ b/dynaportal/templates/dynaportal/home.html
@@ -25,6 +25,8 @@
 {% heading field %}
     {% endif %}
 {% endfor %}
-{% button 'Submit' '' %} 
+{% for btn  in buttons %}
+{% button 'Submit' 'submit' '' %}
+{% endfor %}
 </form>
 {% endblock content %}
