--- a/dynaportal/templates/dynaportal/home.html
+++ b/dynaportal/templates/dynaportal/home.html
@@ -12,6 +12,9 @@
 {% block content %}
 {%if page%}<h1 class="govuk-heading-xl">{{page.title}}</h1>{%endif%}
 <form method="post" action=""{{action}}>{% csrf_token %}
+{% if view_summary %}
+{% summary_list fields %}
+{% else %}
 {% for field in fields %}
     {% if field.field_type.name == 'INPUT_TEXT' %}
 {% text_input field %}
@@ -25,6 +28,7 @@
 {% heading field %}
     {% endif %}
 {% endfor %}
+{% endif %}
 {% for btn  in buttons %}
 {% button 'Submit' 'submit' '' %}
 {% endfor %}
