--- a/dynaportal/templates/dynaportal/home.html
+++ b/dynaportal/templates/dynaportal/home.html
@@ -8,10 +8,12 @@
 {% load radios %}
 {% load select %}
 {% load heading %}
+{% load summary_list %}
 
 {% block content %}
 {%if page%}<h1 class="govuk-heading-xl">{{page.title}}</h1>{%endif%}
 <form method="post" action=""{{action}}>{% csrf_token %}
+<input name="state" type="hidden" value="{{state}}">
 {% if view_summary %}
 {% summary_list fields %}
 {% else %}
