--- a/dynaportal/templates/dynaportal/home.html
+++ b/dynaportal/templates/dynaportal/home.html
@@ -14,7 +14,9 @@
 {%if page%}<h1 class="govuk-heading-xl">{{page.title}}</h1>{%endif%}
 <form method="post" action=""{{action}}>{% csrf_token %}
 <input name="state" type="hidden" value="{{state}}">
-{% if view_summary %}
+{% if page_no == 'welcome' %}
+{{welcome_page | safe}}
+{% elif view_summary %}
 {% summary_list fields %}
 {% else %}
 {% for field in fields %}
@@ -32,7 +34,7 @@
 {% endfor %}
 {% endif %}
 {% for btn  in buttons %}
-{% button 'Submit' 'submit' '' %}
+{% button btn.label btn.value btn.type %}
 {% endfor %}
 </form>
 {% endblock content %}
