--- a/dynaportal/templates/dynaportal/home.html
+++ b/dynaportal/templates/dynaportal/home.html
@@ -11,10 +11,11 @@
 {% load summary_list %}
 
 {% block content %}
-{%if page%}<h1 class="govuk-heading-xl">{{page.title}}</h1>{%endif%}
+{%if page.title %}<h1 class="govuk-heading-xl">{{page.title}}</h1>{%endif%}
 <form method="post" action=""{{action}}>{% csrf_token %}
-<input name="state" type="hidden" value="{{state}}">
-{% if page_no == 'welcome' %}
+<input name="state" type="hidden" value="{{state}}" />
+<input name="page-step" type="hidden" value="{{page.step}}" />
+{% if page.step == 'welcome' %}
 {{welcome_page | safe}}
 {% elif view_summary %}
 {% summary_list fields %}
