--- a/dynaportal/templates/dynaportal/partials/footer.html
+++ b/dynaportal/templates/dynaportal/partials/footer.html
@@ -51,7 +51,7 @@
           <a
             class="govuk-footer__link govuk-footer__copyright-logo"
             style="background-image: url({% static 'images/ortho-icon.png' %});"
-            href="https://my-trademark-copyright/">© {{tradeMark}}</a>
+            href="/">© {{tradeMark}}</a>
         </div>
       </div>
     </div>
