--- a/dynaportal/templates/dynaportal/partials/footer.html
+++ b/dynaportal/templates/dynaportal/partials/footer.html
@@ -7,23 +7,13 @@
           <h2 class="govuk-visually-hidden">Support links</h2>
           <ul class="govuk-footer__inline-list">
             <li class="govuk-footer__inline-list-item">
-              <a class="govuk-footer__link" href="#">
+              <a class="govuk-footer__link" href="https://www.linkedin.com/in/loghman-barari-13095724/">
                 Help
               </a>
             </li>
             <li class="govuk-footer__inline-list-item">
-              <a class="govuk-footer__link" href="#">
-                Cookies
-              </a>
-            </li>
-            <li class="govuk-footer__inline-list-item">
-              <a class="govuk-footer__link" href="#">
+              <a class="govuk-footer__link" href="mailto:loghmanb@gmail.com">
                 Contact
-              </a>
-            </li>
-            <li class="govuk-footer__inline-list-item">
-              <a class="govuk-footer__link" href="#">
-                Terms and conditions
               </a>
             </li>
           </ul>
@@ -56,4 +46,3 @@
       </div>
     </div>
 </footer>
-
